--- a/MainMusicStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/MainMusicStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -10,36 +10,45 @@
 
 <form method="post">
     <div class="row p-3 border">
-
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Id != 0)
         {
             title = "Edit Category";
         }
-        <div class="col-4">
+        <div class="col-12 border-bottom">
             <h2 class="text-white">@title</h2>
         </div>
-        <div class="col-8">
-            <div class="col-4">
-                <label asp-for="CategoryName"></label>
-            </div>
-            <div class="col-8">
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
-            </div>
+        <div class="col-8 pt-4">
+            <div class="form-group row">
 
-        </div>
-        <div class="form-group">
-            <div class="col-8 offset-4">
-                @if (Model.Id != 0)
-                {
-                    <partial name="_EditAndBackToListButton" model="Model.Id" />
-                }
-                else
-                {
-                    <partial name="_CreateAndBackToListButton" />
-                }
+                <div class="col-4">
+                    <label asp-for="CategoryName"></label>
+                </div>
+
+                <div class="col-8">
+                    <input asp-for="CategoryName" class="form-control" />
+                    <span asp-validation-for="CategoryName" class="text-danger"></span>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <div class="col-8 offset-4">
+                    @if (Model.Id != 0)
+                    {
+                        <partial name="_EditAndBackToListButton" model="Model.Id" />
+                    }
+                    else
+                    {
+                        <partial name="_CreateAndBackToListButton" />
+                    }
+                </div>
             </div>
         </div>
     </div>
 
 </form>
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
