Product Crud Operations

--- a/MainMusicStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/MainMusicStore/Areas/Admin/Views/Product/Index.cshtml
@@ -21,8 +21,10 @@
                 <th>ISBN</th>
                 <th>Price</th>
                 <th>Author</th>
-                <th>Category</th>
-                
+                <th>Category Name</th>
+                <th>Operations</th>
+
+
 
                 <th></th>
             </tr>
