--- a/MainMusicStore/Views/Shared/_Layout.cshtml
+++ b/MainMusicStore/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MainMusicStore</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Main Music Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,9 +51,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-white bg-primary text-white">
+    <footer class="border-dark footer text-white bg-dark text-white">
         <div class="container">
-            &copy; 2020 - MainMusicStore
+            &copy; 2020 - Main Music Store
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
