--- a/MainMusicStore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MainMusicStore/Areas/Identity/Pages/Account/Register.cshtml
@@ -96,7 +96,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-info" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
