Shopping Managment and Operations

--- a/MainMusicStore/Views/Shared/_Layout.cshtml
+++ b/MainMusicStore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿@using MainMusicStore.Utility
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 
 <!DOCTYPE html>
 <html lang="en">
@@ -58,6 +60,29 @@
                             </li>
                         }
 
+                        @if (HttpContextAccessor.HttpContext.Session.GetInt32(ProjectConstant.shoppingCart) != null)
+                        {
+                            <li style="color:white">
+                                <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link">
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.GetInt32(ProjectConstant.shoppingCart);
+                                    }
+                                    <i class="fas fa-shopping-cart">(@count)</i>
+                                </a>
+
+                            </li>
+                        }
+                        else
+                        {
+                            <li style="color:white">
+                                <a href="a" class="nav-link">
+                                   
+                                    <i class="fas fa-shopping-cart">(0)</i>
+                                </a>
+
+                            </li>
+                        }
+
 
 
 
@@ -74,7 +99,7 @@
 
     <footer class="border-dark footer text-white bg-dark text-white">
         <div class="container">
-            &copy; 2020 - Main Music Store
+            &copy; 2021 - Main Music Store
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
